# NetChat

./: .gitignore  CMakeLists.txt  README.md
cmake/: proto2cpp.cmake
include/: base.h  crypto_utils.h  db.h  db_access.h  file_storage.h  group.h  logging.h  message.h  sarray.h  threadsafe_queue.h  user.h  user_manager.h  van.h
include/utils/: crypto.h  logging.h  misc.h
proto/: messages.proto
src/: logging.h  main.cpp  messages.pb.cc  messages.pb.h  meta.pb.cc  meta.pb.h  meta.proto  van.cpp
src/Client/: Client.cpp  Client.h  client_van.h  van.h
src/Server/: Server.cpp  Server.h  db_access.cpp  server_van.h
src/db/: db_access.cpp
src/file/: file_storage.cpp
